Added function to generate sample list. Samples route now pulls list from db

--- a/views/Pug/createsample.pug
+++ b/views/Pug/createsample.pug
@@ -59,5 +59,9 @@ html
 			textarea(name="sampleDescription")
 			br
 			br
+			label(for="locksample") Lock Sample
+			input(type="checkbox", name="locksample", value="locksample")
+			br
+			br
 			input(type="submit", value="Save Sample")
 			
