--- a/views/Pug/style.css
+++ b/views/Pug/style.css
@@ -5,5 +5,11 @@ h1{
 .db-table{
 	display: grid;
 	grid-template-columns: auto auto auto auto auto auto;
+	height: auto;	
+}
+
+.sampleRow{
+	line-height: 10px;
+	min-height: 100px;
 	
 }
